<resources>
    <string name="app_name">Calculator</string>

    <!--keypad-->
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>

    <!--operation-->
    <string name="key_sum">+</string>
    <string name="key_sub">–</string>
    <string name="key_mul">×</string>
    <string name="key_div">÷</string>

    <string name="key_clear">C</string>
    <string name="key_braces">( )</string>
    <string name="key_percentage">%</string>
    <string name="key_negative">+/–</string>
    <string name="key_decimal">.</string>
    <string name="key_equals">=</string>

    <!--guidance-->
    <string name="skip">Skip</string>
    <string name="swipe_left">Swipe left to remove item</string>
    <string name="long_touch">Long touch to clear calculations</string>
</resources>