<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCalculatorBackground"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_menu" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.jakode.calculator.CalculatorOutputView
            android:id="@+id/calculator_output"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <com.jakode.calculator.CalculatorInputView
                android:id="@+id/history"
                android:layout_width="@dimen/sizeIcon"
                android:layout_height="@dimen/sizeIcon"
                android:layout_marginStart="16dp"
                app:icon="@drawable/ic_history_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.jakode.calculator.CalculatorInputView>

            <com.jakode.calculator.CalculatorInputView
                android:id="@+id/backspace"
                android:layout_width="@dimen/sizeIcon"
                android:layout_height="@dimen/sizeIcon"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                app:icon="@drawable/ic_backspace_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.91"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/keypad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_clear"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:color_text="@color/colorTextLight"
                        app:layout_constraintBottom_toTopOf="@+id/key_7"
                        app:layout_constraintEnd_toStartOf="@+id/key_braces"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:text="@string/key_clear" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_braces"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:color_text="@color/colorTextLight"
                        app:layout_constraintBottom_toTopOf="@+id/key_8"
                        app:layout_constraintEnd_toStartOf="@+id/key_percentage"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_clear"
                        app:layout_constraintTop_toTopOf="parent"
                        app:text="@string/key_braces" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_percentage"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:color_text="@color/colorTextLight"
                        app:layout_constraintBottom_toTopOf="@+id/key_9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_braces"
                        app:layout_constraintTop_toTopOf="parent"
                        app:text="@string/key_percentage" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_7"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_4"
                        app:layout_constraintEnd_toStartOf="@+id/key_8"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/key_clear"
                        app:text="@string/key_7" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_8"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_5"
                        app:layout_constraintEnd_toStartOf="@+id/key_9"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_7"
                        app:layout_constraintTop_toBottomOf="@+id/key_braces"
                        app:text="@string/key_8" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_9"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_8"
                        app:layout_constraintTop_toBottomOf="@+id/key_percentage"
                        app:text="@string/key_9" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_4"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_1"
                        app:layout_constraintEnd_toStartOf="@+id/key_5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/key_7"
                        app:text="@string/key_4" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_5"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_2"
                        app:layout_constraintEnd_toStartOf="@+id/key_6"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_4"
                        app:layout_constraintTop_toBottomOf="@+id/key_8"
                        app:text="@string/key_5" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_6"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_5"
                        app:layout_constraintTop_toBottomOf="@+id/key_9"
                        app:text="@string/key_6" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_1"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_negative"
                        app:layout_constraintEnd_toStartOf="@+id/key_2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/key_4"
                        app:text="@string/key_1" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_0"
                        app:layout_constraintEnd_toStartOf="@+id/key_3"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_1"
                        app:layout_constraintTop_toBottomOf="@+id/key_5"
                        app:text="@string/key_2" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_3"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/key_decimal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_2"
                        app:layout_constraintTop_toBottomOf="@+id/key_6"
                        app:text="@string/key_3" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_negative"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/key_0"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/key_1"
                        app:text="@string/key_negative" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_0"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/key_decimal"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_negative"
                        app:layout_constraintTop_toBottomOf="@+id/key_2"
                        app:text="@string/key_0" />

                    <com.jakode.calculator.CalculatorInputView
                        android:id="@+id/key_decimal"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/key_0"
                        app:layout_constraintTop_toBottomOf="@+id/key_3"
                        app:text="@string/key_decimal" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:weightSum="5">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/operations"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/operations_background"
                        tools:ignore="NestedWeights">

                        <com.jakode.calculator.CalculatorInputView
                            android:id="@+id/key_div"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:color_text="@color/colorTextLight"
                            app:layout_constraintBottom_toTopOf="@+id/key_mul"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:text="@string/key_div" />

                        <com.jakode.calculator.CalculatorInputView
                            android:id="@+id/key_mul"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:color_text="@color/colorTextLight"
                            app:layout_constraintBottom_toTopOf="@+id/key_sub"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/key_div"
                            app:text="@string/key_mul" />

                        <com.jakode.calculator.CalculatorInputView
                            android:id="@+id/key_sub"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:color_text="@color/colorTextLight"
                            app:layout_constraintBottom_toTopOf="@+id/key_sum"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/key_mul"
                            app:text="@string/key_sum" />

                        <com.jakode.calculator.CalculatorInputView
                            android:id="@+id/key_sum"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:color_text="@color/colorTextLight"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/key_sub"
                            app:text="+" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/key_equals"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="4"
                        android:background="@drawable/equals_background"
                        android:text="@string/key_equals"
                        android:textColor="@android:color/background_light"
                        android:textSize="34sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>